Fixed bug that items tab was not sortable by name (unmodifiable list in the background);